<resources>
    <string name="app_name">小账本</string>

    <!--activity_main布局中的字符串资源-->
    <string name="activity_main_home_rdb_name">首页</string>
    <string name="activity_main_bill_rdb_name">账单</string>
    <string name="activity_main_wish_rdb_name">心愿</string>
    <string name="activity_main_statements_rdb_name">报表</string>

    <!--fragment_home布局里-->
    <string name="fragment_home_tv_location">待定位..</string>
    <string name="fragment_home_tv_net_assets">净资产￥0.00</string>
    <string name="fragment_home_tv_all_assets">总资产￥0.00</string>
    <string name="fragment_home_tv_negative_assets">总负债￥0.00</string>
    <string name="fragment_home_tv_account_assets">账户资产</string>

    <!--fragment_bill布局里-->
    <string name="fragment_bill_tv_title">账单</string>
    <string name="fragment_bill_tv_time_select">请选择日期▼</string>
    <string name="fragment_bill_tv_screen">筛选</string>
    <string name="fragment_bill_tv_bill_details">账单明细</string>
    <string name="fragment_bill_tv_select_income_pay">筛选收支类型</string>
    <string name="fragment_bill_rdb_select_total_income">全部收入</string>
    <string name="fragment_bill_rdb_select_total_pay">全部支出</string>
    <string name="fragment_bill_tv_select_classification">筛选分类</string>
    <string name="fragment_bill_cxb_other">其他</string>
    <string name="fragment_bill_tv_pay">支出</string>
    <string name="fragment_bill_tv_income">收入</string>
    <string name="fragment_bill_cxb_reimbursement">可报销</string>
    <string name="fragment_bill_cxb_internal_transfer">内部转账</string>
    <string name="fragment_bill_cxb_deposit">存款</string>
    <string name="fragment_bill_cxb_collect_debts">收债</string>
    <string name="fragment_bill_cxb_return_credit_card">还信用卡</string>
    <string name="fragment_bill_btn_reset">重置</string>
    <string name="fragment_bill_btn_finish">完成</string>
    <string name="fragment_bill_tv_classification_for_sorting">按时间</string>

    <!--fragment_wish布局里-->
    <string name="fragment_wish_tv_title_text">一点一滴，为梦想存钱</string>
    <string name="fragment_wish_btn_save_money">为梦想存钱</string>
    <string name="fragment_wish_btn_wish_list">查看我的梦想列表</string>

    <!--fragment_statements布局里-->
    <string name="fragment_wish_tv_title">报表</string>
    <string name="fragment_wish_tv_time_select">请选择日期▼</string>

    <!--dialog_add_one布局里-->
    <string name="dialog_add_one_make_bill">记一笔</string>
    <string name="dialog_add_one_make_asset">记资产</string>
    <string name="dialog_add_one_make_wish">记心愿</string>

    <!--activity_home_login布局里-->
    <string name="activity_home_login_tv_title">理财 始于效率</string>
    <string name="activity_home_login_edt_number">请输入账号</string>
    <string name="activity_home_login_edt_password">请输入密码</string>
    <string name="activity_home_login_btn_login">登录</string>
    <string name="activity_home_login_btn_goto_register">暂无账号 前去注册</string>

    <!--activity_home_register布局里-->
    <string name="activity_home_register_tv_title">理财 始于效率</string>
    <string name="activity_home_register_edt_username">请输入用户名</string>
    <string name="activity_home_register_edt_number">请输入账号</string>
    <string name="activity_home_register_edt_password">请收入密码</string>
    <string name="activity_home_register_edt_ensure_password">请确认密码</string>
    <string name="activity_home_register_btn_register">注册</string>
    <string name="activity_home_register_btn_goto_login">已有账号 前去登录</string>

    <!--activity_add_wish布局里-->
    <string name="activity_add_wish_tv_my_wish">我的心愿是</string>
    <string name="activity_add_wish_edt_write_wish">请写下你的心愿</string>
    <string name="activity_add_wish_tv_my_wish_budget">我的心愿预算</string>
    <string name="activity_add_wish_edt_wish_money">实现心愿所需的金额</string>
    <string name="activity_add_wish_tv_wish_month">我的心愿实现月数</string>
    <string name="activity_add_wish_tv_select_month">选择所需的月份数▼</string>
    <string name="activity_add_wish_btn_next">下一步</string>
    <string name="activity_add_wish_tips">tips：每个月大概需要存——</string>
    <string name="activity_add_wish_seize_seat">0.00</string>
    <string name="activity_add_wish_yuan">元</string>
    <string name="activity_add_wish_other_wish">看看大家的心愿</string>
    <string name="activity_add_wish_travel">来一场旅行</string>
    <string name="activity_add_wish_phone">换一部新手机</string>
    <string name="activity_add_wish_gift">送TA一份礼物</string>

    <!--activity_home_rate布局里-->
    <string name="activity_home_rate_up_rate">1.00</string>
    <string name="activity_home_rate_down_rate">0.14</string>

    <!--activity_house_rate布局里-->
    <string name="activity_house_rate_title">房贷计算器</string>
    <string name="activity_house_rate_business">商业贷</string>
    <string name="activity_house_rate_public_fund">公基金贷</string>
    <string name="activity_house_rate_combination">组合贷</string>
    <string name="activity_house_rate_find">发现</string>

    <!--activity_make_bill布局里-->
    <string name="activity_make_bill_pay">支出</string>
    <string name="activity_make_bill_income">收入</string>

    <!--fragment_make_bill_pay布局里-->
    <string name="fragment_make_bill_pay_input_money">输入支出金额</string>
    <string name="fragment_make_bill_pay_today">今天</string>
    <string name="fragment_make_bill_pay_remarks_information">请输入备注信息(最多140字)</string>
    <string name="fragment_make_bill_pay_determine">确定</string>

    <!--支出类别文字-->
    <string name="expenditure_category_food">餐饮</string>
    <string name="expenditure_category_travel">旅行</string>
    <string name="expenditure_category_shop">购物</string>
    <string name="expenditure_category_traffic">交通</string>
    <string name="expenditure_category_communication">通讯</string>
    <string name="expenditure_category_hospital">医疗</string>
    <string name="expenditure_category_house">住房</string>
    <string name="expenditure_category_child">育儿</string>
    <string name="expenditure_category_teach">文教</string>
    <string name="expenditure_category_play">娱乐</string>
    <string name="expenditure_category_pet">宠物</string>
    <string name="expenditure_category_life">生活</string>
    <string name="expenditure_category_other">其它</string>
    <!--收入类别文字-->
    <string name="income_category_bonus">奖金</string>
    <string name="income_category_wages">工资</string>
    <string name="income_category_investment_profit">投资收益</string>
    <string name="income_category_reimbursement">报销</string>
    <string name="income_category_borrow">借入</string>
    <string name="income_category_investment_recovery">投资回收</string>
    <string name="income_category_debt_collection">收债</string>
    <string name="income_category_red_envelopes">红包</string>

    <!--fragment_make_bill_income布局里-->
    <string name="fragment_make_bill_income_today">今天</string>
    <string name="fragment_make_bill_income_remarks_information">请输入备注信息(最多140字)</string>
    <string name="fragment_make_bill_income_determine">确定</string>
    <string name="fragment_make_bill_income_input_money">输入收入金额</string>

    <!--银行等金钱来源-->
    <string name="money_from_alipay">支付宝</string>

    <!--activity_make_asset布局里-->
    <string name="activity_make_asset_title">新建账户</string>
    <string name="activity_make_asset_card_name">借记卡</string>
    <string name="activity_make_asset_remark_message">备注信息   如工资卡(可不填)</string>
    <string name="activity_make_asset_card_number">账户卡号</string>
    <string name="activity_make_asset_asset_from">资产来源</string>
    <string name="activity_make_asset_user_balance">账户余额:</string>
    <string name="activity_make_asset_input_balance_hint">￥0.00</string>
    <string name="activity_make_asset_add_new_money">添加新币种</string>
    <string name="activity_make_asset_save">保存</string>

    <!--menu_spinner_make_asset菜单里-->
    <string name="menu_spinner_make_asset_debit_card">借记卡</string>
    <string name="menu_spinner_make_asset_credit_card">信用卡</string>
    <string name="menu_spinner_make_asset_other_card">其他</string>

    <!--pop_menu_make_asset菜单里-->
    <string name="pop_menu_make_asset_icbc">工商银行</string>
    <string name="pop_menu_make_asset_spdb">浦发银行</string>
    <string name="pop_menu_make_asset_abc">农业银行</string>
    <string name="pop_menu_make_asset_bcm">交通银行</string>
    <string name="pop_menu_make_asset_boc">中国银行</string>c
    <string name="pop_menu_make_asset_ccb">建设银行</string>
    <string name="pop_menu_make_asset_cmb">招商银行</string>
    <string name="pop_menu_make_asset_alipay">支付宝</string>
    <string name="pop_menu_make_asset_wechat">微信</string>

    <!--activity_home_about布局里-->
    <string name="activity_home_about_tv_creator">Creator: cetwag yuebanquan zyhang8</string>
    <string name="activity_home_about_tv_time">Time: 2019.5——2019.7</string>
    <string name="activity_home_about_tv_description">Description: A Simple Accounting App
        Interest Works of Three Sophomores</string>
    <string name="activity_home_about_tv_characteristic">Characteristic: Various Interactive Logics among Multicurrencies;
        Synchronization mechanism between server and multi-device;
        Introduction of Wish Module</string>
    <string name="activity_home_about_tv_contact_us">Github_repository: Accounting_App</string>



</resources>
