<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_make_wish"
    android:orientation="vertical">

    <!--占位-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:text="@string/activity_add_wish_tv_my_wish"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edt_write_wish"
            android:layout_width="200dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:background="@drawable/line_block"
            android:hint="@string/activity_add_wish_edt_write_wish"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="75dp"
            android:text="@string/activity_add_wish_tv_my_wish_budget"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_write_money"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="75dp"
            android:background="@drawable/line_block"
            android:hint="@string/activity_add_wish_edt_wish_money"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_wish_month"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:text="@string/activity_add_wish_tv_wish_month"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_select_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="75dp"
            android:background="#ffff"
            android:gravity="start|center"
            android:text="@string/activity_add_wish_tv_select_month"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="130dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:background="@drawable/pay_income_state_pressed"
            android:text="@string/activity_add_wish_btn_next"
            android:textSize="24sp"
            android:textStyle="bold" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_add_wish_tips"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_seat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_wish_seize_seat"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_wish_yuan"
                android:textSize="17sp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_add_wish_other_wish"
            android:textColor="#666666"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:id="@+id/otherWish1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_wish_travel" />

            <Button
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:id="@+id/otherWish2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_wish_phone" />

            <Button
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:id="@+id/otherWish3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_add_wish_gift" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>