<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_home_about_tv_creator"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_home_about_tv_time"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_home_about_tv_description"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_home_about_tv_characteristic"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_home_about_tv_contact_us"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"/>


</LinearLayout>