<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/Imgbtn_select_from_income"
                android:layout_width="45dp"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:background="@drawable/bank_alipay" />

            <TextView
                android:id="@+id/tv_from_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/money_from_alipay"
                android:textColor="#000000" />
        </LinearLayout>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/fragment_make_bill_income_input_money"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColorHint="#666666"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rdg_one_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdb_bonus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/icon_money_change"
                android:gravity="center"
                android:text="@string/income_category_bonus" />

            <RadioButton
                android:id="@+id/rdb_wages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/icon_salary_change"
                android:gravity="center"
                android:text="@string/income_category_wages" />

            <RadioButton
                android:id="@+id/rdb_invest_profit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/icon_invest_change"
                android:gravity="center"
                android:text="@string/income_category_investment_profit" />

            <RadioButton
                android:id="@+id/rdb_reimbursement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/icon_repay_change"
                android:gravity="center"
                android:text="@string/income_category_reimbursement" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rdg_two_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdb_borrow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/icon_borrow_change"
                android:gravity="center"
                android:text="@string/income_category_borrow" />

            <RadioButton
                android:id="@+id/rdb_invest_recovery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/icon_reinvest_change"
                android:gravity="center"
                android:text="@string/income_category_investment_recovery" />

            <RadioButton
                android:id="@+id/rdb_debts_collection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/icon_collectdebts_change"
                android:gravity="center"
                android:text="@string/income_category_debt_collection" />

            <RadioButton
                android:id="@+id/rdb_red_envelope"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/icon_redpaper_change"
                android:gravity="center"
                android:text="@string/income_category_red_envelopes" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdb_select_time_income"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@null"
            android:drawableTop="@drawable/ic_date_range_black_24dp"
            android:gravity="center"
            android:text="@string/fragment_make_bill_income_today"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_remarks_message_income"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/fragment_make_bill_income_remarks_information"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="#666666"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_determine_income"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/pay_income_state_pressed"
        android:text="@string/fragment_make_bill_income_determine"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>